Test GET /todos/{todo} endpoint and write least amount of code to pass
