# src/storage/api-docs/api-docs.json
@@ -131,6 +131,57 @@
                     }
                 }
             }
+        },
+        "/todos/{todo}": {
+            "get": {
+                "tags": [
+                    "Todo"
+                ],
+                "summary": "Get a todo resource.",
+                "operationId": "App\\Http\\Controllers\\TodoController::show",
+                "parameters": [
+                    {
+                        "name": "todo",
+                        "in": "path",
+                        "description": "ID of Todo",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "allOf": [
+                                        {
+                                            "$ref": "#/components/schemas/Todo"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    },
+                    "400-599": {
+                        "description": "unsuccessful operation",
+                        "content": {
+                            "application/problem+json": {
+                                "schema": {
+                                    "type": "object",
+                                    "allOf": [
+                                        {
+                                            "$ref": "#/components/schemas/ProblemResponse"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
